--- a/app/src/main/res/layout/ui2_dashboard.xml
+++ b/app/src/main/res/layout/ui2_dashboard.xml
@@ -59,6 +59,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="10dp"
+        android:id="@+id/ui2_recycle"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,7 +153,7 @@
     </FrameLayout>
 
     <ProgressBar
-        android:id="@+id/progress1"
+        android:id="@+id/ui2_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
