--- a/app/src/main/res/layout/ui3_add_job.xml
+++ b/app/src/main/res/layout/ui3_add_job.xml
@@ -192,8 +192,8 @@
 
             <TextView
                 android:id="@+id/textView14"
-                android:layout_width="21dp"
-                android:layout_height="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="@string/add_job_6"
                 android:textColor="@color/black"
                 android:textSize="15sp"
@@ -367,7 +367,7 @@
             <EditText
                 android:id="@+id/name_description"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:autofillHints=""
