--- a/app/src/main/res/layout/ui7_settings.xml
+++ b/app/src/main/res/layout/ui7_settings.xml
@@ -209,8 +209,8 @@
 
                     </ImageView>
 
-                    <TextView
-                        android:id="@+id/status"
+                    <EditText
+                        android:id="@+id/ui7_status"
                         android:layout_width="200dp"
                         android:padding="4dp"
                         android:layout_height="wrap_content"
@@ -218,7 +218,7 @@
                         android:layout_gravity="center"
                         android:hint="Status">
 
-                    </TextView>
+                    </EditText>
 
 
                 </FrameLayout>
