--- a/app/src/main/res/layout/ui7_settings.xml
+++ b/app/src/main/res/layout/ui7_settings.xml
@@ -156,7 +156,7 @@
 
                     <Spinner
                         android:id="@+id/spinner_state"
-                        android:layout_width="wrap_content"
+                        android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
                         android:layout_marginStart="80dp"
