--- a/app/src/main/res/layout/ui7_settings.xml
+++ b/app/src/main/res/layout/ui7_settings.xml
@@ -92,12 +92,12 @@
                     <EditText
                         android:id="@+id/ui7_name"
                         android:layout_width="200dp"
-                        android:padding="4dp"
-                        android:background="@drawable/shape_card_shaper"
+                        android:textColor="@color/black"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:hint="Name" >
-                    </EditText>
+                        android:background="@drawable/shape_card_shaper"
+                        android:hint="Name"
+                        android:padding="4dp"></EditText>
 
 
                 </FrameLayout>
@@ -118,6 +118,7 @@
                     <EditText
                         android:id="@+id/ui7_phone"
                         android:layout_width="200dp"
+                        android:textColor="@color/black"
                         android:padding="4dp"
                         android:background="@drawable/shape_card_shaper"
                         android:layout_height="wrap_content"
@@ -213,6 +214,7 @@
                         android:id="@+id/ui7_status"
                         android:layout_width="200dp"
                         android:padding="4dp"
+                        android:textColor="@color/black"
                         android:layout_height="wrap_content"
                         android:background="@drawable/shape_card_shaper"
                         android:layout_gravity="center"
@@ -240,6 +242,7 @@
                         android:id="@+id/saved"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:layout_gravity="center"
                         android:text="Saved">
 
@@ -264,6 +267,7 @@
                     <TextView
                         android:id="@+id/posts"
                         android:layout_width="wrap_content"
+                        android:textColor="@color/black"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:text="Posts">
@@ -288,6 +292,7 @@
                         android:id="@+id/documents"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:layout_gravity="center"
                         android:text="Documents">
 
@@ -313,6 +318,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:textColor="@color/black"
                         android:text="Education">
 
                     </TextView>
@@ -337,6 +343,7 @@
                         android:id="@+id/privacy"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:layout_gravity="center"
                         android:text="Privacy">
 
@@ -363,6 +370,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:textColor="@color/black"
                         android:text="About">
 
                     </TextView>
