backend and db complete for add doc

--- a/app/src/main/res/layout/ui8_add_document.xml
+++ b/app/src/main/res/layout/ui8_add_document.xml
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/document_description" />
 
     <TextView
-        android:id="@+id/textView25"
+        android:id="@+id/ui8_file_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -103,7 +103,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView25">
+        app:layout_constraintTop_toBottomOf="@+id/ui8_file_name">
 
     </ProgressBar>
 
