--- a/app/src/main/res/layout/card3_document.xml
+++ b/app/src/main/res/layout/card3_document.xml
@@ -22,6 +22,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/card3_document"
         android:text="file_name"
         android:textColor="@color/boundary1"
         android:textSize="10sp"
