--- a/app/src/main/res/layout/ui6_notification.xml
+++ b/app/src/main/res/layout/ui6_notification.xml
@@ -127,6 +127,7 @@
         android:layout_margin="10dp"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView20">
 
