--- a/app/src/main/res/drawable/shape_card_shaper.xml
+++ b/app/src/main/res/drawable/shape_card_shaper.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/background" />
-    <stroke
-        android:width="2dp"
-        android:color="@color/boundary1" >
-    </stroke>
-    <corners android:radius="16dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Add shadow layer -->
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/transparent" />
+            <corners android:radius="16dp" />
+        </shape>
+    </item>
+
+    <!-- Add main shape -->
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#FAEEEE" />
+            <corners android:radius="16dp" />
+        </shape>
+    </item>
+</layer-list>
